--- a/package.json
+++ b/package.json
@@ -1,73 +1,47 @@
 {
-  "name": "kisan-saathi-frontend",
+  "name": "kisan-saathi",
   "version": "1.0.0",
-  "description": "Farmer advisory system frontend - Kisan Saathi",
+  "description": "Complete Agricultural Advisory Platform - Smart India Hackathon 2025",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "type-check": "tsc --noEmit",
-    "dev:setup": "chmod +x scripts/dev-setup.sh && ./scripts/dev-setup.sh",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:reset": "prisma migrate reset --force",
-    "prisma:seed": "tsx prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "setup": "chmod +x setup.sh && ./setup.sh",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:backend": "cd backend && source venv/bin/activate && streamlit run api/main.py",
+    "dev:full": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "build": "cd frontend && npm run build",
+    "start": "cd frontend && npm start",
+    "lint": "cd frontend && npm run lint",
+    "type-check": "cd frontend && npm run type-check",
+    "test:frontend": "cd frontend && npm run test",
+    "test:backend": "cd backend && python test_integration.py",
+    "clean": "rm -rf frontend/node_modules frontend/.next backend/venv backend/__pycache__",
+    "install:frontend": "cd frontend && npm install",
+    "install:backend": "cd backend && pip install -r requirements.txt"
   },
-  "dependencies": {
-    "@auth/prisma-adapter": "^2.7.2",
-    "@prisma/client": "^5.22.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@tanstack/react-query": "^5.59.16",
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.7.7",
-    "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.11.11",
-    "lucide-react": "^0.456.0",
-    "next": "15.0.3",
-    "next-auth": "^4.24.10",
-    "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.1",
-    "react-hot-toast": "^2.4.1",
-    "react-markdown": "^9.0.1",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.76",
-    "zustand": "^5.0.1"
-  },
+  "keywords": [
+    "agriculture",
+    "farming",
+    "ai",
+    "machine-learning",
+    "crop-recommendation",
+    "disease-detection",
+    "smart-india-hackathon",
+    "nextjs",
+    "python",
+    "langchain",
+    "indian-farmers"
+  ],
+  "author": "Kisan Saathi Team",
+  "license": "MIT",
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^22.8.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
-    "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.14",
-    "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "concurrently": "^8.2.2"
   },
-  "engines": {
-    "node": ">=18.0.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Mauryavardhan/KisanSaathi.git"
   },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  }
+  "bugs": {
+    "url": "https://github.com/Mauryavardhan/KisanSaathi/issues"
+  },
+  "homepage": "https://github.com/Mauryavardhan/KisanSaathi#readme"
 }
